force-app/main/default/objects/SAJ_Analyze_Result__c/SAJ_Analyze_Result__c.object-meta.xml
<CustomObject>
    <label>Analyze Result</label>
    <nameField>
        <label>Analyze Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyze Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>