force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_App_Analyze_Job__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App_Analyze_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Analyze Job</label>
    <referenceTo>SAJ_Analyze_Job_Assignment__c</referenceTo>
    <relationshipLabel>Analyze Results</relationshipLabel>
    <relationshipName>Analyze_Results</relationshipName>
    <type>Lookup</type>
</CustomField>