force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_Environment__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>SAJ_Environment__c</referenceTo>
    <relationshipLabel>Analyze Results</relationshipLabel>
    <relationshipName>Analyze_Results</relationshipName>
    <type>Lookup</type>
</CustomField>