force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_Parent__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SAJ_Analyze_Result__c</referenceTo>
    <relationshipLabel>Analyze Results</relationshipLabel>
    <relationshipName>Analyze_Results</relationshipName>
    <type>Lookup</type>
</CustomField>