force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_Passed__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>