force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_Release__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>SAJ_Release__c</referenceTo>
    <relationshipLabel>Analyze Results</relationshipLabel>
    <relationshipName>Analyze_Results</relationshipName>
    <type>Lookup</type>
</CustomField>