force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_Report__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report</label>
    <type>Checkbox</type>
</CustomField>