force-app/main/default/objects/SAJ_Analyze_Result__c/fields/SAJ_Total_Time__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Total_Time__c</fullName>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>