force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Build_Summary.recordType-meta.xml
<RecordType>
    <fullName>Build_Summary</fullName>
    <active>true</active>
    <label>Build Summary</label>
</RecordType>