force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Environment.recordType-meta.xml
<RecordType>
    <fullName>Environment</fullName>
    <active>true</active>
    <label>Environment</label>
</RecordType>