force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Environment_Summary.recordType-meta.xml
<RecordType>
    <fullName>Environment_Summary</fullName>
    <active>true</active>
    <label>Environment Summary</label>
</RecordType>