force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Execution_Summary.recordType-meta.xml
<RecordType>
    <fullName>Execution_Summary</fullName>
    <active>true</active>
    <label>Execution Summary</label>
</RecordType>