force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Job_Result_1.recordType-meta.xml
<RecordType>
    <fullName>Job_Result_1</fullName>
    <active>true</active>
    <label>Job Result 1</label>
</RecordType>