force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Job_Result_2.recordType-meta.xml
<RecordType>
    <fullName>Job_Result_2</fullName>
    <active>true</active>
    <label>Job Result 2</label>
</RecordType>