force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Job_Result_3.recordType-meta.xml
<RecordType>
    <fullName>Job_Result_3</fullName>
    <active>true</active>
    <label>Job Result 3</label>
</RecordType>