force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Job_Result_4.recordType-meta.xml
<RecordType>
    <fullName>Job_Result_4</fullName>
    <active>true</active>
    <label>Job Result 4</label>
</RecordType>