force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Job_Summary.recordType-meta.xml
<RecordType>
    <fullName>Job_Summary</fullName>
    <active>true</active>
    <label>Job Summary</label>
</RecordType>