force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Release.recordType-meta.xml
<RecordType>
    <fullName>Release</fullName>
    <active>true</active>
    <label>Release</label>
</RecordType>