force-app/main/default/objects/SAJ_Analyze_Result__c/recordTypes/Release_Component.recordType-meta.xml
<RecordType>
    <fullName>Release_Component</fullName>
    <active>true</active>
    <label>Release Component</label>
</RecordType>